# assignment-submission-checker

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  api.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini  users.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: build-docs.yaml  ci.yaml
_sources/: contributing.md.txt  index.md.txt
_sources/api/: assignment.md.txt
api/: assignment.html  cli.html  directory.html  git-utils.html  utils.html
assignment_checker/: assignment.py  checker.py  cli.py
assignment_submission_checker/: __init__.py  assignment.py  checker.py  cli.py  cli_main.py  directory.py  git_utils.py  printing.py  static.py  utils.py
assignment_submission_checker/logging/: checker_error.py  entries.py  log_entry.py  log_types.py  logger.py
docs/source/: api.md  conf.py  contributing.md  index.md  index.rst  users.md
docs/source/api/: cli.md  directory.md  git-utils.md  utils.md
specs/: 2024-001.json  2024-002.json  README.md
tests/: __init__.py  conftest.py  test_assignment.py  test_checker.py  test_directory.py  test_utils.py
tests/assignment/: _base_testclass.py  test_creation.py  test_file_finder.py  test_git.py
tests/data/: 2024-25-01.json  template.json
tests/directory/: test_basics.py  test_check_directory.py  test_match_variable_name_subdirs.py  test_supporting_checks.py
tests/directory/check_against_directory.py/: test_2024-2025-a1.py
tests/integration-test/: test_integration.py
tests/logger/: test_log_entry.py
