[project]
name = "assignment_submission_checker"
description = " A CLI tool to validate that your submission for a COMP0233 assignment has the correct file structure."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "William Graham", email = "william.graham@ucl.ac.uk" }]
classifiers = ["Programming Language :: Python :: 3.10"]
dependencies = ["GitPython", "requests"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "check-manifest",
    "myst-parser",
    "sphinx",
    "sphinx-pdj-theme",
    "pre-commit",
    "pytest",
    "tox >= 4",
]

[project.scripts]
assignment-checker = "assignment_submission_checker.cli:cli"

[project.urls]
homepage = "https://github.com/UCL-COMP0233-23-24/assignment-submission-checker"
github = "https://github.com/UCL-COMP0233-23-24/assignment-submission-checker"
bug-tracker = "https://github.com/UCL-COMP0233-23-24/assignment-submission-checker/issues"

[build-system]
requires = ["setuptools >= 45", "setuptools-scm >= 6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.check-manifest]

[tool.isort]
profile = "black"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["assignment_submission_checker"]

[tool.setuptools_scm]

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
    py310
minversion = 4.6.3

[gh-actions]
python =
    3.10: py310

[testenv]
description = Run unit tests with pytest
package = wheel
pass_env = HOME
wheel_build_env = .pkg
deps =
    pytest>=6
commands =
    pytest {tty:--color=yes} -vv --ignore=tests/integration-test/ {toxinidir} {posargs}
"""
